2009-11-02  Keishi Hattori  <casey.hattori@gmail.com>

        Reviewed by Timothy Hatcher.

        Web Inspector: Rewrite CSSSourceSyntaxHighlighter so it shares more code
        https://bugs.webkit.org/show_bug.cgi?id=30907

        Test: inspector/css-syntax-highlight.html

        * inspector/front-end/ElementsTreeOutline.js:
        * inspector/front-end/SourceFrame.js:
        (WebInspector.SourceFrame.prototype.syntaxHighlightCSS):
        (WebInspector.SourceSyntaxHighlighter):
        (WebInspector.SourceSyntaxHighlighter.prototype.process.processChunk):
        (WebInspector.SourceSyntaxHighlighter.prototype.process.moveToNextLine):
        (WebInspector.SourceSyntaxHighlighter.prototype.process):
        (WebInspector.SourceSyntaxHighlighter.prototype.lex):
        (WebInspector.SourceSyntaxHighlighter.prototype.appendNonToken):
        (WebInspector.SourceSyntaxHighlighter.prototype.syntaxHighlightNode):
        (WebInspector.CSSSourceSyntaxHighlighter):
        * inspector/front-end/inspectorSyntaxHighlight.css:

2009-11-02  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Support ARIA "tab" roles
        https://bugs.webkit.org/show_bug.cgi?id=30842

        Implement support for ARIA "tab", "tabpanel" and "tablist".
        As a consequence, we also needed to implement aria-selected
        and aria-controls.

        Tests: accessibility/aria-controls-with-tabs.html
               accessibility/aria-tab-roles.html

        * accessibility/AXObjectCache.cpp:
        * accessibility/AccessibilityObject.h:
        * accessibility/AccessibilityRenderObject.cpp:
        * accessibility/AccessibilityRenderObject.h:
        * accessibility/mac/AccessibilityObjectWrapper.mm:
        * html/HTMLAttributeNames.in:

2009-10-27  Stephen White  <senorblanco@chromium.org>

        Reviewed by Dmitry Titov.

        This is the WebKit-side change needed to fix canvas.getImageData() for