@@ -1427,8 +1427,12 @@ static AtkAttributeSet* webkit_accessible_document_get_attributes(AtkDocument* d
 
 static const gchar* webkit_accessible_document_get_locale(AtkDocument* document)
 {
-    // FIXME: This needs to be implemented.
-    notImplemented();
+
+    // TODO: Should we fall back on lang xml:lang when the following comes up empty?
+    String language = static_cast<AccessibilityRenderObject*>(core(document))->language();
+    if (!language.isEmpty())
+        return returnString(language);
+
     return 0;
 }
 
